Changelog for five.grok
-----------------------

five.grok - 1.0a2 (Unreleased)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* Added support for viewlets with `grokcore.viewlet`_.
  [thefunny42]

* Added support for using Zope 2 templates by default when doing ``from
  five import grok`` and using grok.PageTemplateFile (being consistent
  with grok.PageTemplate).
  [thefunny42]

five.grok - 1.0a1 (2008-10-22)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* Added support for formlib forms with `grokcore.formlib`_.
  [thefunny42]

* Added support for static resource directory.
  [thefunny42]

* Added support for inline templates and made Zope 2 template semantics
  the default when doing ``from five import grok`` and using
  grok.PageTemplate.
  [optilude]

* Added override to make templates use Five's ViewPageTemplateFile instead
  of the one from zope.app.pagetemplate.
  [optilude]

* Added grokcore.view support with tests.
  [regebro, jfroche, gotcha et al.]

* Added tests for grok.subscriber directive.
  [kamon]

* Initial release (tests for adapters and utilities, initial support for
  views).
  [regebro, gotcha]


.. _grokcore.viewlet: http://pypi.python.org/pypi/grokcore.viewlet
.. _grokcore.formlib: http://pypi.python.org/pypi/grokcore.formlib