@@ -31,7 +31,7 @@ setup(name='five.grok',
         'martian',
         'grokcore.component',
         'grokcore.formlib',
-        'grokcore.view >= 1.1',
+        'grokcore.view >= 1.2',
         'grokcore.viewlet',
         'grokcore.security',
         ],
